[gd_scene load_steps=27 format=2]

[ext_resource path="res://addons/GodotUITutorial/Tutorial.gd" type="Script" id=1]
[ext_resource path="res://addons/GodotUITutorial/sounds/achievement_bell.ogg" type="AudioStream" id=2]
[ext_resource path="res://addons/GodotUITutorial/cursor_help.tscn" type="PackedScene" id=3]
[ext_resource path="res://addons/GodotUITutorial/sounds/textWriter.ogg" type="AudioStream" id=5]
[ext_resource path="res://assets/ui/fonts/DejaVuSans.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://game/assets/sounds/button.ogg" type="AudioStream" id=8]
[ext_resource path="res://addons/GodotUITutorial/fonts/OpenSans-Regular.ttf" type="DynamicFontData" id=9]

[sub_resource type="StyleBoxFlat" id=1]
draw_center = false
corner_radius_top_left = 1
corner_radius_top_right = 1
corner_radius_bottom_right = 1
corner_radius_bottom_left = 1
shadow_color = Color( 0, 0.952941, 1, 0.501961 )
shadow_size = 12

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0, 0, 0, 0.227451 )

[sub_resource type="DynamicFont" id=19]
size = 18
use_mipmaps = true
font_data = ExtResource( 9 )

[sub_resource type="StyleBoxFlat" id=3]
content_margin_left = 30.0
content_margin_right = 30.0
content_margin_top = 15.0
content_margin_bottom = 15.0
bg_color = Color( 0, 0, 0, 0.568627 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
shadow_color = Color( 0, 0, 0, 0.0705882 )
shadow_size = 10

[sub_resource type="DynamicFont" id=14]
size = 18
use_mipmaps = true
font_data = ExtResource( 9 )

[sub_resource type="StyleBoxFlat" id=5]
content_margin_left = 30.0
content_margin_right = 30.0
content_margin_top = 15.0
content_margin_bottom = 15.0
bg_color = Color( 0.0567, 0.43335, 0.81, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
shadow_color = Color( 0, 0, 0, 0.0705882 )
shadow_size = 10

[sub_resource type="StyleBoxFlat" id=6]
content_margin_left = 30.0
content_margin_right = 30.0
content_margin_top = 15.0
content_margin_bottom = 15.0
bg_color = Color( 0.0392157, 0.301961, 0.560784, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
shadow_color = Color( 0, 0, 0, 0.0705882 )
shadow_size = 10

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="StyleBoxFlat" id=9]
content_margin_left = 30.0
content_margin_right = 30.0
content_margin_top = 15.0
content_margin_bottom = 15.0
bg_color = Color( 0.0392157, 0.301961, 0.560784, 0.698039 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
shadow_color = Color( 0, 0, 0, 0.0705882 )
shadow_size = 10

[sub_resource type="DynamicFont" id=15]
size = 18
use_mipmaps = true
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=11]
outline_size = 2
outline_color = Color( 0, 0, 0, 0.45098 )
use_mipmaps = true
use_filter = true
extra_spacing_top = -2
extra_spacing_bottom = -2
font_data = ExtResource( 7 )

[sub_resource type="StyleBoxFlat" id=4]
content_margin_left = 30.0
content_margin_right = 30.0
content_margin_top = 15.0
content_margin_bottom = 15.0
bg_color = Color( 0, 0, 0, 0.568627 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
shadow_color = Color( 0, 0, 0, 0.0705882 )
shadow_size = 10

[sub_resource type="DynamicFont" id=12]
size = 18
use_mipmaps = true
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=13]
size = 20
use_mipmaps = true
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=16]
size = 18
use_mipmaps = true
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=17]
size = 18
use_mipmaps = true
font_data = ExtResource( 9 )

[sub_resource type="StyleBoxEmpty" id=8]

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0.211765, 0.211765, 0.211765, 1 )

[sub_resource type="DynamicFont" id=18]
use_mipmaps = true
use_filter = true
extra_spacing_top = -2
extra_spacing_bottom = -2
font_data = ExtResource( 7 )

[node name="Tutorial" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 1 )

[node name="Popup" type="Popup" parent="."]
unique_name_in_owner = true
visible = true
margin_left = -29.0
margin_top = -3274.0
margin_right = -29.0
margin_bottom = -745.0
rect_min_size = Vector2( 17, 3249 )
popup_exclusive = true

[node name="ColorRect" type="ColorRect" parent="Popup"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.964706, 1, 0.560784, 0.360784 )

[node name="ClickArea" type="Panel" parent="."]
unique_name_in_owner = true
margin_left = -29.0
margin_top = -25.0
margin_right = -12.0
margin_bottom = -10.0
mouse_filter = 2
custom_styles/panel = SubResource( 1 )

[node name="Panel" type="Panel" parent="ClickArea"]
unique_name_in_owner = true
show_behind_parent = true
anchor_right = 1.0
margin_top = -3249.0
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="Panel2" type="Panel" parent="ClickArea"]
unique_name_in_owner = true
show_behind_parent = true
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = 3257.0
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="Panel3" type="Panel" parent="ClickArea"]
unique_name_in_owner = true
show_behind_parent = true
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -3282.0
margin_right = 5699.0
margin_bottom = 3282.0
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="Panel4" type="Panel" parent="ClickArea"]
unique_name_in_owner = true
show_behind_parent = true
anchor_bottom = 1.0
margin_left = -4591.0
margin_top = -3270.0
margin_bottom = 3270.0
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="InfoText" type="Label" parent="."]
unique_name_in_owner = true
visible = false
margin_left = 436.0
margin_top = 298.0
margin_right = 819.0
margin_bottom = 357.0
size_flags_vertical = 0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 19 )
custom_styles/normal = SubResource( 3 )
text = "asdasdasdaasda"
align = 1
valign = 1
autowrap = true
percent_visible = 0.0

[node name="NextStepButton" type="Button" parent="InfoText"]
unique_name_in_owner = true
visible = false
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -176.0
margin_top = 14.0
margin_bottom = 72.0
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
custom_colors/font_color_focus = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 14 )
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 6 )
custom_styles/focus = SubResource( 7 )
custom_styles/disabled = SubResource( 9 )
custom_styles/normal = SubResource( 9 )
text = "Siguiente"

[node name="BackButton" type="Button" parent="InfoText"]
unique_name_in_owner = true
visible = false
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = 14.0
margin_right = 176.0
margin_bottom = 72.0
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
custom_colors/font_color_focus = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 15 )
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 6 )
custom_styles/focus = SubResource( 7 )
custom_styles/disabled = SubResource( 9 )
custom_styles/normal = SubResource( 9 )
text = "Volver"

[node name="Steps" type="Label" parent="InfoText"]
unique_name_in_owner = true
margin_left = 15.0
margin_top = -23.0
margin_right = 55.0
margin_bottom = -8.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 11 )
text = "1/10"

[node name="CursorHelp" parent="." instance=ExtResource( 3 )]
unique_name_in_owner = true
visible = false

[node name="TextWriteSound" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource( 5 )

[node name="CorrectSound" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource( 2 )
volume_db = -20.0

[node name="IdleTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 5.0
one_shot = true

[node name="Intro" type="Control" parent="."]
unique_name_in_owner = true
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Panel" type="Panel" parent="Intro"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -203.0
margin_top = -128.0
margin_right = 203.0
margin_bottom = 128.0
custom_styles/panel = SubResource( 4 )

[node name="IntroText" type="Label" parent="Intro/Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -191.5
margin_top = -112.5
margin_right = 191.5
margin_bottom = 38.5
size_flags_vertical = 0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 12 )
text = "Un especialista de control aplica los códigos de estado dentro de una plataforma llamada HaulRoute. Ahora veremos con algunos ejemplos cómo el especialista puede asignar los estados a las distintas máquinas."
align = 1
valign = 1
autowrap = true

[node name="IntroStartButton" type="Button" parent="Intro/Panel"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -88.0
margin_top = -74.0
margin_right = 88.0
margin_bottom = -16.0
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
custom_colors/font_color_focus = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 13 )
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 6 )
custom_styles/focus = SubResource( 7 )
custom_styles/disabled = SubResource( 6 )
custom_styles/normal = SubResource( 6 )
text = "Comenzar"

[node name="Outro" type="Control" parent="."]
unique_name_in_owner = true
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Panel" type="Panel" parent="Outro"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -203.0
margin_top = -116.0
margin_right = 203.0
margin_bottom = 116.0
custom_styles/panel = SubResource( 4 )

[node name="OutroText" type="Label" parent="Outro/Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -191.5
margin_top = -112.5
margin_right = 191.5
margin_bottom = 38.5
size_flags_vertical = 0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 16 )
text = "Tutorial concluido, ahora nos enfrentaremos a a solicitudes de cambio de estados, usa lo aprendido para cumplir con tus tareas."
align = 1
valign = 1
autowrap = true

[node name="OutroButton" type="Button" parent="Outro/Panel"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -88.0
margin_top = -74.0
margin_right = 88.0
margin_bottom = -16.0
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
custom_colors/font_color_focus = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 17 )
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 6 )
custom_styles/focus = SubResource( 8 )
custom_styles/disabled = SubResource( 6 )
custom_styles/normal = SubResource( 6 )
text = "Continuar"

[node name="LoadingCanvasLayer" type="CanvasLayer" parent="."]
unique_name_in_owner = true
visible = false

[node name="LoadingPanel" type="Panel" parent="LoadingCanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
custom_styles/panel = SubResource( 10 )

[node name="Label" type="Label" parent="LoadingCanvasLayer/LoadingPanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -63.0
margin_top = -11.5
margin_right = 63.0
margin_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 18 )
text = "Cargando..."
align = 1
valign = 1

[node name="ButtonSound" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource( 8 )

[connection signal="pressed" from="InfoText/NextStepButton" to="." method="_on_IntroStartButton_pressed"]
[connection signal="pressed" from="InfoText/BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="timeout" from="IdleTimer" to="." method="_on_IdleTimer_timeout"]
[connection signal="pressed" from="Intro/Panel/IntroStartButton" to="." method="_on_IntroStartButton_pressed"]
[connection signal="pressed" from="Outro/Panel/OutroButton" to="." method="_on_OutroButton_pressed"]
